# mlscraper-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: generation.rs  match6481506591.html
examples/: amazon.rs  big.rs  small.rs
python_comparison/: README.md  amazon.py  amazon_galaxy.html  amazon_iphone.html
src/: lib.rs  search.rs  selectors.rs  util.rs
