[package]
name = "mlscraper-rust"
version = "0.1.0"
authors = ["Aaron Hilbig <hilbigan.info@gmail.com>"]
description = "Scrape structured data from HTML documents automatically"
keywords = [
    "scraping",
    "selector",
    "html",
    "css"
]
categories = [
    "web-programming",
    "development-tools"
]
readme = "README.md"
repository = "https://github.com/hilbigan/mlscraper-rust"
license = "MIT"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "screenshots/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
tl = "0.7.7"
anyhow = "1.0.17"
radix_trie = "0.2.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "generation"
harness = false
